--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -591,7 +591,8 @@
     <string name="maximum_number_of_users">You have selected the maximum number of users.</string>
     <string name="logout_if_email_already_registred">There is a user with this email already. If this is your email, you have to log out of the current account and log into %s account.</string>
     <string name="recover_password_instructions">An email has been sent to you with the password recovery instruction.</string>
-    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
-    <string name="pull_to_refresh_release_label">Release to refresh…</string>
-    <string name="pull_to_refresh_refreshing_label">Loading…</string>
+    <string name="email_changing">Email change</string>
+    <string name="hint_faces_filter">Change search options and meet new interesting people.</string>
+    <string name="hint_faces_buy_like">The more likes you have, the more often you get rated. Don\'t forget to refill the likes balance.</string>
+    <string name="hint_myprofile_buy_vip">Buy VIP-status and enjoy unlimited communication</string>
 </resources>
