--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -581,4 +581,5 @@
     <string name="reply">Antworten</string>
     <string name="measurement_unit_weight">kg.</string>
     <string name="measurement_unit_height">cm.</string>
+    <string name="email_changing">E-Mail ändern</string>
 </resources>
