--- a/src/main/res/values-lt/strings.xml
+++ b/src/main/res/values-lt/strings.xml
@@ -609,4 +609,8 @@
     <string name="maximum_number_of_users">Pasirinktas maksimalus vartotojų kiekis</string>
     <string name="logout_if_email_already_registred">Vartotojas su tokiu el. paštu jau egzistuoja. Jeigu tai jūsų el. paštas, jums būtina išeiti iš dabartinės paskyros ir įeiti į paskyrą %s</string>
     <string name="recover_password_instructions">Jūsų el. pašto adresu išsiųstas laiškas su slaptažodžio atstatymo instrukcija</string>
+    <string name="email_changing">el. pašto keitimas</string>
+    <string name="hint_faces_filter">Keikite paieškos parametrus ir pažindinkitės su įdomiais žmonėmis</string>
+    <string name="hint_faces_buy_like">Kuo daugiau pas jus simpatijų, tuo dažniau jus įvertina. Nepamirškite papildyti simpatijų atsargos.</string>
+    <string name="hint_myprofile_buy_vip">Pirkite VIP-statusą ir mėgaukitės neapribotu bendravimu</string>
 </resources>
