#33648: Пользователь информируется о том сколько монет ему не хватает

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -231,6 +231,10 @@
         <item quantity="many">Чтобы отправить подарок, купите еще %d монет</item>
         <item quantity="other">Чтобы отправить подарок, купите еще %d монет</item>
     </plurals>
+    <plurals name="buying_admiration_you_need_coins">
+        <item quantity="one">Чтобы отправить восхищение, купите еще %d монету</item>
+        <item quantity="few">Чтобы отправить восхищение, купите еще %d монеты</item>
+    </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
         <item quantity="one">Чтобы увидеть, кому вы нравитесь, купите еще %d монету</item>
         <item quantity="few">Чтобы увидеть, кому вы нравитесь, купите еще %d монеты</item>
