--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -188,6 +188,10 @@
         <item quantity="other">To be able to send a gift, buy %d more coins</item>
         <item quantity="one">To be able to send a gift, buy %d more coin</item>
     </plurals>
+    <plurals name="buying_admiration_you_need_coins">
+        <item quantity="other">To send an admiration, buy %d more coins</item>
+        <item quantity="one">To send an admiration, buy %d more coin</item>
+    </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
         <item quantity="other">To be able to see who likes you, buy %d more coins</item>
         <item quantity="one">To be able to see who likes you, buy %d more coin</item>
@@ -195,6 +199,10 @@
     <plurals name="buying_leaders_you_need_coins">
         <item quantity="other">To be able to be seen by everyone, buy %d more coins</item>
         <item quantity="one">To be able to be seen by everyone, buy %d more coin</item>
+    </plurals>
+    <plurals name="buying_you_need_coins">
+        <item quantity="other">You are short of %d coins</item>
+        <item quantity="one">You are short of %d coin</item>
     </plurals>
     <string name="buying_default_message">You can send gifts and admirations with coins</string>
     <string name="buying_money">Coins purchase</string>
