--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -229,11 +229,6 @@
     <string name="edit_set_as_main">Set as main</string>
     <string name="edit_delete">Delete</string>
     <string name="edit_restore">Restore</string>
-    <string name="gifts_romantic">Romance</string>
-    <string name="gifts_friends">Friendship</string>
-    <string name="gifts_present">Congratulations</string>
-    <string name="gifts_title">Choose a gift</string>
-    <string name="gifts_send_btn">Send a gift</string>
     <string name="form_not_specified">Not specified</string>
     <string name="form_main">Main</string>
     <string name="form_physique">Physique</string>
@@ -603,4 +598,7 @@
     <string name="hint_faces_filter">Change search options and meet new interesting people.</string>
     <string name="hint_faces_buy_like">The more likes you have, the more often you get rated. Don\'t forget to refill the likes balance.</string>
     <string name="hint_myprofile_buy_vip">Buy VIP-status and enjoy unlimited communication</string>
+    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
+    <string name="pull_to_refresh_release_label">Let go to refresh…</string>
+    <string name="pull_to_refresh_refreshing_label">Loading…</string>
 </resources>
