--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -188,6 +188,10 @@
         <item quantity="other">Para enviar regalo, compra %d monedas más</item>
         <item quantity="one">Para enviar regalo, compra %d moneda más</item>
     </plurals>
+    <plurals name="buying_admiration_you_need_coins">
+        <item quantity="other">Para enviar la admiración compra %d monedas más</item>
+        <item quantity="one">Para enviar la admiración compra %d moneda más</item>
+    </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
         <item quantity="other">Para ver a quiénes les gustas, compra %d monedas más</item>
         <item quantity="one">Para ver a quiénes les gustas, compra %d moneda más</item>
@@ -195,6 +199,10 @@
     <plurals name="buying_leaders_you_need_coins">
         <item quantity="other">Para que todos puedan verte, compra %d monedas más</item>
         <item quantity="one">Para que todos puedan verte, compra %d moneda más</item>
+    </plurals>
+    <plurals name="buying_you_need_coins">
+        <item quantity="other">Te falta %d monedas</item>
+        <item quantity="one">Te falta %d moneda</item>
     </plurals>
     <string name="buying_default_message">Puedes enviar regalos y admiraciones pagando monedas</string>
     <string name="buying_money">Comprar monedas</string>
@@ -589,4 +597,7 @@
     <string name="hint_faces_filter">Cambia los parametros de busqueda y conoce a la gente interesante</string>
     <string name="hint_faces_buy_like">Por más simpatías que tengas, más a menudo te evaluan. No te olvides a recargar la cantidad de simpatías.</string>
     <string name="hint_myprofile_buy_vip">Compra el estado VIP y disfruta de la comunicación sin límites</string>
+    <string name="pull_to_refresh_pull_label">Arrastra para actualizar…</string>
+    <string name="pull_to_refresh_release_label">Bajalo para actualizar…</string>
+    <string name="pull_to_refresh_refreshing_label">Cargando…</string>
 </resources>
