--- a/src/main/res/values-lt/strings.xml
+++ b/src/main/res/values-lt/strings.xml
@@ -192,6 +192,11 @@
         <item quantity="other">Tam, kad išsiųsti dovaną, pirkite dar %d monetų</item>
         <item quantity="one">Tam, kad išsiųsti dovaną, pirkite dar %d monetą</item>
     </plurals>
+    <plurals name="buying_admiration_you_need_coins">
+        <item quantity="few">Kad išsiųsti susižavjimą, pirkite dar %d monetas</item>
+        <item quantity="other">Kad išsiųsti susižavjimą, pirkite dar %d monetų</item>
+        <item quantity="one">Kad išsiųsti susižavjimą, pirkite dar %d monetą</item>
+    </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
         <item quantity="few">Kad pamatyti, kam jūs patikote, pirkite dar %d monetas</item>
         <item quantity="other">Kad pamatyti, kam jūs patikote, pirkite dar %d monetų</item>
@@ -201,6 +206,11 @@
         <item quantity="few">Tam, kad jus visi pamatytų, pirkite dar %d monetas</item>
         <item quantity="other">Tam, kad jus visi pamatytų, pirkite dar %d monetų</item>
         <item quantity="one">Tam, kad jus visi pamatytų, pirkite dar %d monetą</item>
+    </plurals>
+    <plurals name="buying_you_need_coins">
+        <item quantity="few">Jums nepakanka %d monetų</item>
+        <item quantity="other">Jums nepakanka %d monetų</item>
+        <item quantity="one">Jums nepakanka %d monetos</item>
     </plurals>
     <string name="buying_default_message">Jūs galite siųsti dovanas ir susižavėjimus už monetas</string>
     <string name="buying_money">Monetų pirkimas</string>
@@ -608,4 +618,7 @@
     <string name="hint_faces_filter">Keikite paieškos parametrus ir pažindinkitės su įdomiais žmonėmis</string>
     <string name="hint_faces_buy_like">Kuo daugiau pas jus simpatijų, tuo dažniau jus įvertina. Nepamirškite papildyti simpatijų atsargos.</string>
     <string name="hint_myprofile_buy_vip">Pirkite VIP-statusą ir mėgaukitės neapribotu bendravimu</string>
+    <string name="pull_to_refresh_pull_label">Patempkite, kad atnaujinti…</string>
+    <string name="pull_to_refresh_release_label">Paleiskite, kad atnaujinti…</string>
+    <string name="pull_to_refresh_refreshing_label">Kraunasi…</string>
 </resources>
