--- a/src/main/res/values-cs/strings.xml
+++ b/src/main/res/values-cs/strings.xml
@@ -140,6 +140,11 @@
     <string name="buying_header_title">Nákupy</string>
     <string name="buying_default_message">Můžete odesílat dárky a obdivy za mince</string>
     <string name="buying_money">Nákup mincí</string>
+    <string name="gifts_romantic">Romantické</string>
+    <string name="gifts_friends">Kamarádské</string>
+    <string name="gifts_present">Gratulovací</string>
+    <string name="gifts_title">Vyberte dárek</string>
+    <string name="gifts_send_btn">Odeslat dárek</string>
     <string name="profile_header_title">Můj profil</string>
     <string name="profile_add_album">Vybrat z toho, co je k dispozici</string>
     <string name="profile_add_camera">Vytvořit fotku</string>
