--- a/src/main/res/values-el/strings.xml
+++ b/src/main/res/values-el/strings.xml
@@ -190,6 +190,11 @@
     </plurals>
     <string name="buying_default_message">Μπορείτε να στείλετε τα δώρα και το θαυμασμό για τα κέρματα</string>
     <string name="buying_money">Αγορά κερμάτων</string>
+    <string name="gifts_romantic">Ρομαντισμό</string>
+    <string name="gifts_friends">Φιλία</string>
+    <string name="gifts_present">Συγχαρητήρια</string>
+    <string name="gifts_title">Επιλέξτε ένα δώρο</string>
+    <string name="gifts_send_btn">Στείλτε ένα δώρο</string>
     <string name="profile_header_title">Το προφίλ μου</string>
     <string name="profile_add_album">Επιλέξτε από τις διαθέσιμες</string>
     <string name="profile_add_camera">Τραβήξτε μια εικόνα</string>
