--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -206,6 +206,11 @@
     </plurals>
     <string name="buying_default_message">Puedes enviar regalos y admiraciones pagando monedas</string>
     <string name="buying_money">Comprar monedas</string>
+    <string name="gifts_romantic">Romántica</string>
+    <string name="gifts_friends">Amistad</string>
+    <string name="gifts_present">Felicitaciones</string>
+    <string name="gifts_title">Elige regalo</string>
+    <string name="gifts_send_btn">Enviar regalo</string>
     <string name="profile_header_title">Mi perfil</string>
     <string name="album_add_photo_title">Agregar foto</string>
     <string name="profile_add_album">Elegir de los existentes</string>
