--- a/src/main/res/values-it/strings.xml
+++ b/src/main/res/values-it/strings.xml
@@ -206,6 +206,11 @@
     </plurals>
     <string name="buying_default_message">Puoi inviare regali e ammirazioni pagando con le monete</string>
     <string name="buying_money">Acquisto monete</string>
+    <string name="gifts_romantic">Romanticismo</string>
+    <string name="gifts_friends">Amicizia</string>
+    <string name="gifts_present">Auguri</string>
+    <string name="gifts_title">Scegli regalo</string>
+    <string name="gifts_send_btn">Invia regalo</string>
     <string name="profile_header_title">Mio profilo</string>
     <string name="album_add_photo_title">Aggiungere foto</string>
     <string name="profile_add_album">Scegliere dagli esistenti</string>
