--- a/src/main/res/values-ko/strings.xml
+++ b/src/main/res/values-ko/strings.xml
@@ -136,6 +136,11 @@
     <string name="buying_header_title">구입</string>
     <string name="buying_default_message">선물을 보낼 수 있으며, 코인 선물에 대한 감탄을 보낼 수 있습니다.</string>
     <string name="buying_money">코인 구입</string>
+    <string name="gifts_romantic">로맨틱</string>
+    <string name="gifts_friends">우정</string>
+    <string name="gifts_present">축하</string>
+    <string name="gifts_title">선물을 선택하기</string>
+    <string name="gifts_send_btn">선물을 보내기</string>
     <string name="profile_header_title">내 프로필</string>
     <string name="profile_add_album">사진 앨범에서 선택하기</string>
     <string name="profile_add_camera">카메라에서 촬영하기</string>
