--- a/src/main/res/values-lt/strings.xml
+++ b/src/main/res/values-lt/strings.xml
@@ -214,6 +214,11 @@
     </plurals>
     <string name="buying_default_message">Jūs galite siųsti dovanas ir susižavėjimus už monetas</string>
     <string name="buying_money">Monetų pirkimas</string>
+    <string name="gifts_romantic">Romantiškos</string>
+    <string name="gifts_friends">Draugiškos</string>
+    <string name="gifts_present">Sveikinimų</string>
+    <string name="gifts_title">Pasirinkite dovaną</string>
+    <string name="gifts_send_btn">Išsiųsti dovaną</string>
     <string name="profile_header_title">Mano profilis</string>
     <string name="album_add_photo_title">Pridėti foto</string>
     <string name="profile_add_album">Pasirinkti iš esančių</string>
