--- a/src/main/res/values-pt/strings.xml
+++ b/src/main/res/values-pt/strings.xml
@@ -194,6 +194,11 @@
     </plurals>
     <string name="buying_default_message">Você pode enviar presentes e admirações por moedas</string>
     <string name="buying_money">Compra de moedas</string>
+    <string name="gifts_romantic">Românticos</string>
+    <string name="gifts_friends">Amigáveis</string>
+    <string name="gifts_present">Felicitáveis</string>
+    <string name="gifts_title">Selecione presente</string>
+    <string name="gifts_send_btn">Enviar presente</string>
     <string name="profile_header_title">Meu perfil</string>
     <string name="profile_add_album">Seleccionar dos disponíveis</string>
     <string name="profile_add_camera">Tirar a foto</string>
