--- a/src/main/res/values-ro/strings.xml
+++ b/src/main/res/values-ro/strings.xml
@@ -134,6 +134,11 @@
     <string name="buying_header_title">Cumparaturi</string>
     <string name="buying_default_message">Puteti trimite cadouri si admirari pentru monete</string>
     <string name="buying_money">Cumpararea monedelor</string>
+    <string name="gifts_romantic">Romantica</string>
+    <string name="gifts_friends">Prietenie</string>
+    <string name="gifts_present">Felicitari</string>
+    <string name="gifts_title">Alege cadou</string>
+    <string name="gifts_send_btn">Trimite cadou</string>
     <string name="profile_header_title">Profilul meu</string>
     <string name="profile_add_album">Alege din prezentele</string>
     <string name="profile_add_camera">Face poza</string>
