--- a/src/main/res/values-sk/strings.xml
+++ b/src/main/res/values-sk/strings.xml
@@ -140,6 +140,11 @@
     <string name="buying_header_title">Nákupy</string>
     <string name="buying_default_message">Môžete odosielať darčeky a obdivy za mince</string>
     <string name="buying_money">Nákup mincí</string>
+    <string name="gifts_romantic">Romantika</string>
+    <string name="gifts_friends">Priateľstvo</string>
+    <string name="gifts_present">Gratulácie</string>
+    <string name="gifts_title">Vyberte darček</string>
+    <string name="gifts_send_btn">Poslať darček</string>
     <string name="profile_header_title">Môj profil</string>
     <string name="profile_add_album">Vybrať z toho, čo je k dispozícii</string>
     <string name="profile_add_camera">Vyfotografovať</string>
