--- a/src/main/res/values-sr/strings.xml
+++ b/src/main/res/values-sr/strings.xml
@@ -140,6 +140,11 @@
     <string name="buying_header_title">Kupovina</string>
     <string name="buying_default_message">Možete slati poklone i ushićenja za monete</string>
     <string name="buying_money">Kupovina moneta</string>
+    <string name="gifts_romantic">Romantika</string>
+    <string name="gifts_friends">Prijateljstvo</string>
+    <string name="gifts_present">Čestitke</string>
+    <string name="gifts_title">Odaberite poklon</string>
+    <string name="gifts_send_btn">Poslati poklon</string>
     <string name="profile_header_title">Moj profil</string>
     <string name="profile_add_album">Odabrati od postojećih</string>
     <string name="profile_add_camera">Načiniti snimak</string>
