--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -212,6 +212,11 @@
     </plurals>
     <string name="buying_default_message">Siz, hediyelerinizi ve hayranlığınızı para karşına gönderebilirsiniz</string>
     <string name="buying_money">Para alış verişi</string>
+    <string name="gifts_romantic">Romantik</string>
+    <string name="gifts_friends">Arkadaşlık</string>
+    <string name="gifts_present">Tebrikler</string>
+    <string name="gifts_title">Hediye seçin</string>
+    <string name="gifts_send_btn">Hediye göndermek</string>
     <string name="profile_header_title">Profilim</string>
     <string name="album_add_photo_title">Bir fotoğraf eklemek için</string>
     <string name="profile_add_album">Mevcut olanlardan seçmek</string>
