--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -207,6 +207,11 @@
     </plurals>
     <string name="buying_default_message">You can send gifts and admirations with coins</string>
     <string name="buying_money">Coins purchase</string>
+    <string name="gifts_romantic">Romance</string>
+    <string name="gifts_friends">Friendship</string>
+    <string name="gifts_present">Congratulations</string>
+    <string name="gifts_title">Choose a gift</string>
+    <string name="gifts_send_btn">Send a gift</string>
     <string name="profile_header_title">My profile</string>
     <string name="album_add_photo_title">Add a photo</string>
     <string name="profile_add_album">Choose from available ones</string>
