--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -798,4 +798,9 @@
     <string name="preload_photo_type_wifi">Только WiFi</string>
     <string name="preload_photo_type_always_on">Включена всегда</string>
     <string name="preload_photo_type_preload_off">Выключена</string>
+
+    <string name="wrong_time_popup_title">Установите текущую дату</string>
+    <string name="wrong_time_popup_text">Дата на устройстве не совпадает с текущей</string>
+    <string name="wrong_time_popup_button">Открыть настройки</string>
+
 </resources>
