--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -800,8 +800,7 @@
     <string name="preload_photo_type_always_on">Включена всегда</string>
     <string name="preload_photo_type_preload_off">Выключена</string>
 
-    <string name="wrong_time_popup_title">Установите текущую дату</string>
-    <string name="wrong_time_popup_text">Дата на устройстве не совпадает с текущей</string>
+    <string name="wrong_time_popup_text">Не удалось установить безопасное подключение к удаленному серверу.\nВозможно, на Вашем устройстве установлена неправильная дата.</string>
     <string name="wrong_time_popup_button">Открыть настройки</string>
 
 </resources>
